login quasi completo manca registrare il messaggio che dice che sei connesso, quindi entrare nella schermata principale dei messaggi

--- a/tpisit/chatClient/client.html
+++ b/tpisit/chatClient/client.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <section>
+    <section id="schermata_login">
 
         <p>nome utente:</p>
 
@@ -20,6 +20,8 @@
         <input type="text" id="password">
 
         <button onclick="componi()">invia</button>
+
+        <p id="ricevuta">ricevuta:</p>
 
         <textarea id="ricezione" readonly></textarea>
 
