cambio schermata fatto

--- a/tpisit/chatClient/client.html
+++ b/tpisit/chatClient/client.html
@@ -19,13 +19,17 @@
 
         <input type="text" id="password">
 
-        <button onclick="componi()">invia</button>
+        <button onclick="componiMesLogin()">invia</button>
 
         <p id="ricevuta">ricevuta:</p>
 
         <textarea id="ricezione" readonly></textarea>
 
     </section>
+
+    <div id="secondaSchermata" style="display: none;">
+        <textarea name="messaggioEffettivo" id="messaggioEffettivo"></textarea>
+    </div>
 
     
 
