aggiornate alcune cose, ancora il messaggio non viene inviato

--- a/tpisit/chatClient/client.html
+++ b/tpisit/chatClient/client.html
@@ -25,6 +25,12 @@
 
     <div id="secondaSchermata" style="display: none;">
         <textarea name="messaggioEffettivo" id="messaggioEffettivo"></textarea>
+
+        <button onclick="messaggioEffettivo()">invia messaggio</button>
+
+        <p>messaggi dal server:</p>
+
+        <textarea name="" readonly id=""></textarea>
     </div>
 
     <article id="schermataLoginFallito" style="display: none;">
