implementata la funzione che permette di visualizzare gli utenti attualmente presenti sul server

--- a/tpisit/chatClient/client.html
+++ b/tpisit/chatClient/client.html
@@ -31,6 +31,8 @@
         <p>messaggi dal server:</p>
 
         <textarea name="" readonly id=""></textarea>
+
+        <div id="visualizza utenti">visualizza utenti</div>
     </div>
 
     <article id="schermataLoginFallito" style="display: none;">
@@ -38,7 +40,7 @@
         <img src="divieto di accesso.png" alt="divieto">
 
         <p>Accesso non riuscito</p>
-        <p>ricarica la pagina</p>
+        <p>clicca il pulsante qui sotto</p>
 
         <button onclick="ricaricaLaPagina()">ricarica</button>
 
