messaggio finito e visualizzazione utenti attivi sul server

--- a/tpisit/chatClient/client.html
+++ b/tpisit/chatClient/client.html
@@ -26,11 +26,15 @@
     <div id="secondaSchermata" style="display: none;">
         <textarea name="messaggioEffettivo" id="messaggioEffettivo"></textarea>
 
+        <p id="dataMessaggio">invia un messaggio!!</p>
+
         <button onclick="messaggioEffettivo()">invia messaggio</button>
 
         <p>messaggi dal server:</p>
 
         <textarea name="" readonly id=""></textarea>
+
+        <p>Utenti attualmente <br> presenti sul server:</p>
 
         <div id="visualizzaUtenti">visualizza utenti</div>
     </div>
